--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
+    "dev": "astro dev --host",
+    "start": "astro dev --host",
+    "build": "astro check && astro build",
+    "preview": "astro preview --host",
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/sitemap": "^1.3.3",
-    "@astrojs/tailwind": "^4.0.0",
-    "astro": "^2.7.1",
-    "astro-google-fonts-optimizer": "^0.2.2",
-    "astro-robots-txt": "^0.5.0",
-    "astro-seo": "^0.7.4",
-    "tailwindcss": "^3.3.2"
+    "@astrojs/check": "^0.9.6",
+    "@astrojs/sitemap": "^3.7.0",
+    "astro": "^5.17.1",
+    "astro-icon": "^1.1.5",
+    "astro-seo": "^0.7.6",
+    "schema-dts": "^1.1.5",
+    "typescript": "^5.9.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.1.18",
+    "tailwindcss": "^4.1.18",
+    "tailwindcss-debug-screens": "^3.0.1"
   }
 }
